--- a/sass/section/_article.sass
+++ b/sass/section/_article.sass
@@ -27,6 +27,7 @@
       margin-bottom: 10px
 
   &__info
+    overflow: hidden
 
     &-title
       font-family: Oswald
